--- a/teks.html
+++ b/teks.html
@@ -10,8 +10,8 @@
       <h1>🌸 Makasih ya udah dateng kesini 🌸</h1>
       <p>Karena kamu udah sampe sini aku mau ngucapin makasih karena udah liat web ini</p>
       <p>
-        Aku cuma mau ngasih tau aku ga pernah menyesal kenal kade, aku juga berharap kalo kita bisa sedekat dulu. Meski begitu itu cuma harapanku aja jadi kalaupun itu gabisa terjadi juga gapapa, itu karmaku dan buntut kesalahanku. Selama
-        kamu masih bisa senyum itu udah cukup kok, ini serius.
+        Aku cuma mau ngasih tau aku ga pernah menyesal kenal kade. Sedikit banyak aku ngeliat kamu mempengaruhi orang disekitar kamu, kamu jadi penyemangat mereka, jadi tempat curhat mereka, bikin orang lain bahagia, dll.
+        Dan aku salah satu dari orang itu, jadi aku berterimakasih banget sama kamu. Kamu udah ngasih aku banyak banget kenangan dan momen indah, seru, asik, walaupun kita juga sering berantem tapi itu ga merubah kalo yang bakal kuinget pasti tentang kita seneng seneng bareng.
       </p>
       <p>kamu jaga kesehatan ya, jangan lupa istirahat, jangan capek capek mulu. kalo kamu butuh sesuatu bilang aja, aku ada 24/7 kecuali pas tidur :v</p>
       <p>oiya web ini bakal kulanjut pas udh ada mood, tapi halaman ini bakal ilang beberapa hari setelah aku ngasih surat.</p>
