--- a/main.html
+++ b/main.html
@@ -20,7 +20,7 @@
         </div>
         <button onclick="nextImage()">&#8594;</button>
       </div>
-      <a href="teks.html" class="btn">Kalau udah selesai pencet yang ini⬅️</a>
+      <a href="index.html" class="btn">Kalau udah selesai pencet yang ini⬅️</a>
     </div>
     <script src="script.js"></script>
   </body>
